# dashboard

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  temp.txt
.github/workflows/: ci.yml
dashboard/: asgi.py  settings.py  urls.py  wsgi.py
weather/: admin.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
weather/management/commands/: fetch_all_cities.py
weather/migrations/: 0001_initial.py
weather/templates/weather/: dashboard.html  otp_sent.html  verify_email.html
