[project]
name = "phase4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pyotp>=2.10.0",
    "python-decouple>=3.8",
    "redis>=8.0.0",
]
